# GenCode

./: .env  README.md  index.css  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: graph-viewer.html
src/: App.tsx  main.tsx
src-tauri/: .gitignore  2  Cargo.toml  python_parser.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git.rs  lib.rs  main.rs
src/components/: index.tsx
src/components/core/: AppLayout.tsx  AppSidebar.tsx  ChatInterface.tsx  CodeEditorPage.tsx  CodeGraphViewer.tsx  CodingAgent.tsx  DiffCodeEditorPage.tsx  FileSystemRepresentation.tsx  GraphVisualizer.tsx  Options.tsx  TabComponent.tsx  TerminalWindow.tsx
src/components/git/: GitGraphPanel.tsx  SourceControlPanel.tsx
src/components/layout/: MainEditorPageLayout.tsx
src/components/rootfiles/: buildCodeGraphFromFiles.ts  buildTree.ts  getAllFilePaths.ts  getLanguageFromFileName.ts  openGraphInBrowser.ts
src/components/rootfiles/files/: FileIcon.tsx  FileTree.tsx  buildEnhancedSystemPrompt.ts
src/context/: EditorContext.tsx
src/helpers/constants/: button-constant.ts  graphNodes.ts  options.ts  sampleGraphData.ts
src/helpers/interfaces/: agent-types.ts  file-types.ts  graph-types.ts
src/icons/: app-log.tsx  clone-icon.tsx  file-icon.tsx  graph-icon.tsx  profile.tsx  reports-icon.tsx  sidebar-menu-icon.tsx  source-control.tsx
src/lib/: parser.ts
src/tools/: analysis.ts  cypherTools.ts  fileTools.ts
